feat: add calculator input display

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="calculator">
+            <form>
+                <div>
+                    <input type="text" name="display">
+                </div>
+            </form>
+        </div>
+
+    </div>
 </body>
 </html>
