--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
             <input type="button" value="*" />
           </div>
 
-          
+          <div>
+            <input type="button" value="4" />
+            <input type="button" value="5" />
+            <input type="button" value="3" />
+            <input type="button" value="-" />
+          </div>
         </form>
         
       </div>
