--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
             <input type="button" value="3" />
             <input type="button" value="+" />
           </div>
+
+          <div>
+            <input type="button" value="00" />
+            <input type="button" value="0" />
+            <input type="button" value="=" />
+            
+          </div>
         </form>
         
       </div>
