--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   </head>
   <body>
     <div class="container">
-
       <div class="calculator">
-
         <form>
-          <div>
+          <div class="display">
             <input type="text" name="display" />
           </div>
 
@@ -49,10 +47,8 @@
             <input type="button" value="00" />
             <input type="button" value="0" />
             <input type="button" value="=" />
-            
           </div>
         </form>
-        
       </div>
     </div>
   </body>
